--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
@@ -242,7 +242,10 @@
     <hr>
     <div
         style="text-align: center;display: flex;flex-direction: row;justify-content: space-around;align-items: center;">
-        <button style="outline: none;color:#d35854;margin-bottom: 50px;" mat-icon-button
+        <button style="outline: none;color:#d35854;margin-bottom: 50px;display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;" mat-icon-button
             (click)="uploadImagesBox = false" aria-label="ranking">
             <mat-icon>cancel</mat-icon><br>Cancel
         </button>
