--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.html
@@ -433,7 +433,10 @@ height: 54px;" cdkDragHandle> </div>
 <hr>
 <div
   style="text-align: center;display: flex;flex-direction: row;justify-content: space-around;align-items: center;">
-  <button style="outline: none;color:#d35854;margin-bottom: 50px;" mat-icon-button
+  <button style="outline: none;color:#d35854;margin-bottom: 50px; display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;" mat-icon-button
       (click)="uploadImagesBox = false" aria-label="ranking">
       <mat-icon>cancel</mat-icon><br>Cancel
   </button>
