fix upload image rate scale

--- a/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.html
@@ -23,8 +23,7 @@
         [dialogText]="dialogText"></app-survey-dialog>
 </div>
 
-<div style="display: flex; margin: 0px;
-    width: 100%;">
+<div style="display: flex; margin: 0px;width: 99%;">
     <div style="flex-direction: column;" class="bmx-page" >
         <div style="width: 100%;">
             &nbsp;
