--- a/src/app/bmx/components/templates/templates.component.html
+++ b/src/app/bmx/components/templates/templates.component.html
@@ -95,11 +95,10 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Template name </th>
             <td mat-cell *matCellDef="let element"> {{element.templateName}} </td>
         </ng-container>
-        <ng-container matColumnDef="Created">
+        <ng-container matColumnDef="created">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Created</th>
             <td mat-cell *matCellDef="let element">{{element.created | date:'dd MMMM yyyy, hh:mm:ss a'}}</td>
-        </ng-container>
-        
+        </ng-container>        
 
         <ng-container matColumnDef="Edit">
             <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 3.33%;"> </th>
@@ -134,6 +133,5 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-    <mat-paginator [pageSizeOptions]="[10, 15, 20]" showFirstLastButtons></mat-paginator>
-
+    <mat-paginator [pageSizeOptions]="[10, 15, 20]" showFirstLastButtons></mat-paginator>    
 </div>
