--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/tinder/tinder.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/tinder/tinder.component.html
@@ -64,7 +64,7 @@
 
 
 <!-- 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 CONFIG BOX 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 -->
-<div *ngIf="i === selectedIndex" class="mat-elevation-z4" cdkDrag style="position: absolute;width: 50%;background: #fafafa;z-index: 1;top: -65px;left: 25%;border: #063074 4px solid; overflow: auto;
+<div *ngIf="i === selectedIndex" class="mat-elevation-z4" cdkDrag style="position: absolute;width: 50%;background: #fafafa;z-index: 1;top: -65px;left: 25%;border: #063074 4px solid; overflow: auto; z-index: 10;
        max-height: 36rem;
     bottom: -2; ">
 
@@ -179,24 +179,24 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
 
     <!-- BUTTON-->
     <div class="sm-row-box-rkScale">
-      <div class="button-cancel" style=" display: flex;
+        <div class="button-cancel" style=" display: flex;
   flex-direction: column;
   align-items: center; ">
-        <button style="outline: none;color:#d35854;" mat-icon-button (click)="selectedIndex = ''"
-            aria-label="ranking">
-            <mat-icon>cancel</mat-icon>
-        </button>
-        <p style="margin-top: -11; color: #D35854; font-size: 21px;">Cancel</p>
-      </div>
+            <button style="outline: none;color:#d35854;" mat-icon-button (click)="selectedIndex = ''"
+                aria-label="ranking">
+                <mat-icon>cancel</mat-icon>
+            </button>
+            <p style="margin-top: -11; color: #D35854; font-size: 21px;">Cancel</p>
+        </div>
 
-      <div class="button-Done"style="display: flex; flex-direction: column; align-items: center;">
-        <button style="outline: none;color:#76d354;" mat-icon-button
-            (click)="selectedIndex = '';upLoadNamesAndRationales(testNamesInput)" [disabled]="false"
-            aria-label="ranking">
-            <mat-icon>check_circle</mat-icon>
-        </button>
-        <p style="margin-top: -1; color: #76D354; font-size: 21px;">Done</p>
-    </div>
+        <div class="button-Done" style="display: flex; flex-direction: column; align-items: center;">
+            <button style="outline: none;color:#76d354;" mat-icon-button
+                (click)="selectedIndex = '';upLoadNamesAndRationales(testNamesInput)" [disabled]="false"
+                aria-label="ranking">
+                <mat-icon>check_circle</mat-icon>
+            </button>
+            <p style="margin-top: -1; color: #76D354; font-size: 21px;">Done</p>
+        </div>
     </div>
 </div>
 <!-- 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧END CONFIG BOX 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 -->
@@ -219,8 +219,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
 
         <div style="display: flex;flex-direction: row;gap: 20px; align-items: center;width: 750px;">
 
-            <mat-icon (click)="moveleft()"
-                style="font-size: 30px;color: grey;cursor: pointer;" class="full-icon">
+            <mat-icon (click)="moveleft()" style="font-size: 30px;color: grey;cursor: pointer;" class="full-icon">
                 chevron_left</mat-icon>
 
             <div class="tinder-box">
@@ -279,14 +278,12 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                 <button mat-raised-button (click)="resetVotes()" style="margin-top: 16px;">Reset Votes</button>
 
             </div>
-            <mat-icon *ngIf="survey==false; else isSurvey"
-                (click)="moveRight()"
+            <mat-icon *ngIf="survey==false; else isSurvey" (click)="moveRight()"
                 style="font-size: 30px;color: grey;cursor: pointer;" class="full-icon">
                 chevron_right
             </mat-icon>
             <ng-template #isSurvey>
-                <mat-icon *ngIf="hasVoted; else noHasVoted"
-                    (click)="moveRight()"
+                <mat-icon *ngIf="hasVoted; else noHasVoted" (click)="moveRight()"
                     style="font-size: 30px;color: grey;cursor: pointer;" class="full-icon">
                     chevron_right
                 </mat-icon>
@@ -333,8 +330,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                 <div *ngIf="!ranking" style="display: flex;flex-direction:row;justify-content: space-around;align-items: center;width: 100%;position: relative;
                 bottom: 15px;">
 
-                    <mat-icon (click)="moveleft()"
-                        style="font-size: 30px;color: grey;cursor: pointer;">
+                    <mat-icon (click)="moveleft()" style="font-size: 30px;color: grey;cursor: pointer;">
                         chevron_left
                     </mat-icon>
 
@@ -349,14 +345,12 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                         </mat-icon>
                     </div>
 
-                    <mat-icon *ngIf="survey==false; else isSurvey"
-                        (click)="moveRight()"
+                    <mat-icon *ngIf="survey==false; else isSurvey" (click)="moveRight()"
                         style="font-size: 30px;color: grey;cursor: pointer;">
                         chevron_right
                     </mat-icon>
                     <ng-template #isSurvey>
-                        <mat-icon *ngIf="hasVoted; else noHasVoted"
-                            (click)="moveRight()"
+                        <mat-icon *ngIf="hasVoted; else noHasVoted" (click)="moveRight()"
                             style="font-size: 30px;color: grey;cursor: pointer;" class="full-icon">
                             chevron_right
                         </mat-icon>
@@ -372,19 +366,16 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                     style="display: flex;flex-direction:column;justify-content: center;align-items: center;gap: 30px;">
 
                     <div style="width: 100%;display: flex;justify-content: space-around">
-                        <mat-icon (click)="moveleft()"
-                            style="font-size: 30px;color: grey;cursor: pointer;">
+                        <mat-icon (click)="moveleft()" style="font-size: 30px;color: grey;cursor: pointer;">
                             chevron_left
                         </mat-icon>
 
-                        <mat-icon *ngIf="survey==false; else isSurvey"
-                            (click)="moveRight()"
+                        <mat-icon *ngIf="survey==false; else isSurvey" (click)="moveRight()"
                             style="font-size: 30px;color: grey;cursor: pointer;">
                             chevron_right
                         </mat-icon>
                         <ng-template #isSurvey>
-                            <mat-icon *ngIf="hasVoted; else noHasVoted"
-                                (click)="moveRight()"
+                            <mat-icon *ngIf="hasVoted; else noHasVoted" (click)="moveRight()"
                                 style="font-size: 30px;color: grey;cursor: pointer;" class="full-icon">
                                 chevron_right
                             </mat-icon>
@@ -432,7 +423,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                     <th mat-header-cell *matHeaderCellDef> Name Candidates</th>
                     <td mat-cell *matCellDef="let element"><input type="text" matInput
                             [(ngModel)]="element.nameCandidates" [value]="element.nameCandidates">
-                        </td>
+                    </td>
 
                 </ng-container>
                 <ng-container matColumnDef="rationale">
