--- a/src/app/bmx/components/menu/menu.component.scss
+++ b/src/app/bmx/components/menu/menu.component.scss
@@ -1,6 +1,6 @@
 
 .general-container{
-  width: 300px;
+  width: 250px;
 }
 .menu-container {
   display: flex;
@@ -13,7 +13,7 @@
 }
 .logo-container {
   display: flex;
-  width: 80%;
+  width: 91%;
   flex-direction: column;
   align-items: flex-start;
   gap: 1px;
@@ -37,7 +37,7 @@ width: 87%!important;
   gap: 1px;
   font-family: Arial, sans-serif;
   margin-left: -8px;
-  width: 80%;
+  width: 90%;
 }
 .menu-item-Light{
   padding: 26px 20px;
@@ -121,7 +121,7 @@ width: 87%!important;
   width: 100%;
 }
 .welcome {
-  width: 77%;
+  width: 87%;
   top: 67px;
   margin: 10px 0px;
   display: flex;
@@ -316,10 +316,18 @@ width: 87%!important;
 .hide-button{
   position: absolute;
   top: 20px;
-  left: 233px;
-  outline: none; 
+  left: 220px;
+  outline: none;
   background-color: white;
   box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12), 0 3px 5px -1px rgba(0, 0, 0, 0.2);
   border-radius: 0px;
   display: flex;
+  z-index: 8;
+
+}
+.mat-mdc-icon-button.mat-mdc-button-base {
+  --mdc-icon-button-state-layer-size: 38px;
+  width: var(--mdc-icon-button-state-layer-size);
+  height: var(--mdc-icon-button-state-layer-size);
+  padding: 10px;
 }
