--- a/src/app/bmx/components/project-list/project-list.component.scss
+++ b/src/app/bmx/components/project-list/project-list.component.scss
@@ -4,18 +4,24 @@
   color: #fff !important;
 }
 
+.table th, .table td {
+  padding: 0.75rem 0.3rem 0.75rem 0.75rem !important;
+  vertical-align: top;
+  border-top: 1px solid #dee2e6;
+}
+
 .table{
   td{
-    text-align: center;
+    text-align: start;
   }
 }
 @media screen and (max-width: 1510px){
   .table{
     td{
-      padding: 5px 3px 0 9px !important;
+      padding: 5px 0px 0 0.75rem !important;
     }
   }
-  .calendar{
+  .calendar{ 
     width: 25%;
     position: relative;
     left: 30px !important;
@@ -25,7 +31,7 @@
 @media screen and (max-width: 1390px){
   .table{
     td{
-      padding: 0px 3px 0 0px !important;
+      padding: 0px 0px 0 0.75rem  !important;
     }
   }
   .calendar{
