--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,25 @@
-  app-survey-creation-design {
-      /* Estilos específicos para app-survey-creation-design */
-      width: 100%;
-  }
+app-survey-creation-design {
+    /* Estilos específicos para app-survey-creation-design */
+    width: 100%;
+}
 
-  app-dashboard{
-      width: 76%;
-  }
+app-dashboard {
+    width: 83%;
+}
 
-  @import './styles/theme';
+.mat-icon {
+
+    overflow: visible !important;
+}
+
+@import './styles/theme';
+
+
+
+.mat-mdc-icon-button.mat-mdc-button-base {
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
