--- a/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.html
@@ -309,7 +309,7 @@
             </button>
             <br>
             <button *ngIf="true" (click)="isTemplate=='true'?saveTemplate() : openDialog('save')" mat-icon-button
-                matTooltip="{{isTemplate == 'true' ? 'Save Template' : 'Save Brand Matrix'}}"
+                matTooltip="{{isTemplate == 'true' ? 'save template' : 'save brand matrix'}}"
                 matTooltipPosition="right">
                 <mat-icon class="full-icon">cloud_upload
                 </mat-icon>
