--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.html
@@ -456,6 +456,8 @@ align-items: center; ">
                         (mouseleave)="selectedColumn = ''">
                         <span class="header-delete-icon" matTooltip="double click to delete column"
                             matTooltipPosition="above" (dblclick)="openDialog('delete column', columnName)">x</span>
+                            <mat-icon style="cursor: pointer;" matTooltip="move column to the left"
+                            matTooltipPosition="above" (click)="swapColumnsLeft(e)">chevron_left</mat-icon>
                         <mat-icon style="cursor: pointer;" (click)="swapColumns(e)">chevron_right</mat-icon>
 
                     </div>
