--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -242,19 +242,19 @@ bottom: -2; ">
             <mat-card-title>Test Names</mat-card-title>
         </mat-card-header>
         <mat-card-content>
-            <div style="text-align: center;">
+            <div style="text-align: center;"><!-- <p style="margin-left: 30px; color: #757575;">
+                    Add the names you want to test
+                </p> -->
                 <div style="font-size: 16px;margin: 20px;color: #48535e;">PASTE TEST NAMES</div>
                 <!-- <div style="font-size: 14px;margin-bottom: 20px;color: lightgray;">Brief Description Here</div> -->
             </div>
             <div>
                 <mat-form-field style="width: 90%;margin-left: 20px;" appearance="outline">
-                    <mat-label>Copy & Paste TEST NAMES</mat-label>
+                    <mat-label>Add the names you want to test</mat-label>
                     <textarea matInput rows="4" cols="50" [(ngModel)]="testNamesInput" placeholder=""
                         (ngModelChange)="upLoadNamesAndRationales(testNamesInput, true); "></textarea>
                 </mat-form-field>
-                <p style="margin-left: 30px; color: #757575;">
-                    Add the names you want to test
-                </p>
+
             </div>
 
         </mat-card-content>
@@ -813,7 +813,7 @@ bottom: -2; ">
                     <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 END HEADER TEXT AREA  🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
 
                     <!-- 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 TABLE CELLS  🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 -->
-                   
+
                     <div [style.width]=" columnName == 'nameCandidates'?bmxItem.componentSettings[0].nameCandidatesWidth-20 + 'px':''">
 
                         <!-- IF ELSE TEMPLATE INPUTS  -->
