hide radio buttons

--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -333,7 +333,7 @@ bottom: -2; ">
                 <!-- <mat-checkbox [(ngModel)]="bmxItem.componentSettings[1].isImageType">Rank Logos</mat-checkbox> -->
             </div>
             <div class="sm-row-box-rkScale"
-                *ngIf="this.bmxItem.componentSettings[0].rankType != 'dragAndDrop' && this.bmxItem.componentSettings[0].rankType != 'dropDown'">
+                *ngIf="this.bmxItem.componentSettings[0].rankType != 'dragAndDrop' && this.bmxItem.componentSettings[0].rankType != 'dropDown' && this.bmxItem.componentSettings[0].rankType != 'radio' ">
                 <div>
                     <div
                         style="display: flex;flex-direction: column;justify-content: center;gap: 10px;align-items: center; ">
