Fixed arrows position

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,5 +21,9 @@ app-dashboard {
     display: flex;
     align-items: center;
     justify-content: center;
-    
+
+}
+
+.header-delete-icon {
+    padding-top: 2.5px;
 }
