fixed max rank value

--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.html
@@ -191,7 +191,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                     <mat-radio-group aria-label="Select an option"
                         [(ngModel)]="this.bmxItem.componentSettings[0].rankType">
                         <div style="display: flex;flex-direction: column;gap: 1px;">
-                            <mat-radio-button value="dropDown">Drop-Down</mat-radio-button>
+                            <mat-radio-button value="dropDown">DropDown</mat-radio-button>
                             <mat-radio-button value="radio">Radio Buttons</mat-radio-button>
                             <mat-radio-button value="checkbox">Checkbox</mat-radio-button>
                         </div>
