--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -211,7 +211,7 @@ bottom: -2; ">
                         flex-direction: column;
                         gap: 1px;
                         align-items: flex-start;">
-                                <mat-radio-button value="dropDown">Drop-Down</mat-radio-button>
+                                <mat-radio-button value="dropDown">DropDown</mat-radio-button>
                                 <mat-radio-button value="dragAndDrop">Drag & Drop</mat-radio-button>
                                 <mat-radio-button value="radio">Radio Buttons</mat-radio-button>
                                 <mat-radio-button value="dinamycRadio">Dynamic Radio Buttons</mat-radio-button>
