Change text on sidebar

--- a/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.html
@@ -256,7 +256,7 @@
                 mat-icon-button color="warn" aria-label="aria">
                 <mat-icon class="full-icon">star_border</mat-icon>
             </button>
-            <button (click)="createNewBmxComponent('ranking-scale')" matTooltip="rank matrix" matTooltipPosition="right"
+            <button (click)="createNewBmxComponent('ranking-scale')" matTooltip="rank radio matrix" matTooltipPosition="right"
                 mat-icon-button color="warn" aria-label="aria">
                 <mat-icon class="full-icon">military_tech</mat-icon>
             </button>
