--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -28,13 +28,7 @@ position: absolute;height: 54px;align-items: center">
     justify-content: start;background: #ffffffd9;
     gap: 0px;position: absolute;left: -748px;z-index: 1;border: 2px dashed #324395;">
         <!-- RATE -->
-        <div style="display: flex;flex-direction: column;align-items: center;">
-            <p style="margin: 0 0 -12px;color: #324395;">rank
-            </p>
-            <input type="range" style="margin: 20px;width: 50px;" [(ngModel)]="bmxItem.componentSettings[0].rateWidth"
-                class="slider-font-size" tickInterval="0.5" min="50" max="400"
-                [value]="bmxItem.componentSettings[0].rateWidth">
-        </div>
+        
         <!-- NAME CANDIATES -->
         <div style="display: flex;flex-direction: column;align-items: center;">
             <p style="margin: 0 0 -12px;color: #324395;">candidates
@@ -53,7 +47,13 @@ position: absolute;height: 54px;align-items: center">
                 min="50" max="600" [value]="bmxItem.componentSettings[0].rationalewidth">
         </div>
 
-
+        <div style="display: flex;flex-direction: column;align-items: center;">
+            <p style="margin: 0 0 -12px;color: #324395;">rank
+            </p>
+            <input type="range" style="margin: 20px;width: 50px;" [(ngModel)]="bmxItem.componentSettings[0].rateWidth"
+                class="slider-font-size" tickInterval="0.5" min="50" max="400"
+                [value]="bmxItem.componentSettings[0].rateWidth">
+        </div>
 
         <!-- COMMENTS -->
         <div style="display: flex;flex-direction: column;align-items: center;">
@@ -86,7 +86,7 @@ position: absolute;height: 54px;align-items: center">
         <div style="display: flex;flex-direction: column;align-items: center;">
             <p style="margin: 0 0 -12px;color: #324395;">font size: {{bmxItem.componentSettings[0].fontSize}}</p>
             <input type="range" style="margin: 20px;width: 50px;" [(ngModel)]="bmxItem.componentSettings[0].fontSize"
-                class="slider-font-size" tickInterval="0.1" min="2" max="40"
+                class="slider-font-size" tickInterval="0.1" min="2" max="50"
                 [value]="bmxItem.componentSettings[0].fontSize">
         </div>
 
@@ -211,7 +211,7 @@ bottom: -2; ">
                         flex-direction: column;
                         gap: 1px;
                         align-items: flex-start;">
-                                <mat-radio-button value="dropDown">Drop-Down</mat-radio-button>
+                                <mat-radio-button value="dropDown">DropDown</mat-radio-button>
                                 <mat-radio-button value="dragAndDrop">Drag & Drop</mat-radio-button>
                                 <mat-radio-button value="radio">Radio Buttons</mat-radio-button>
                                 <mat-radio-button value="dinamycRadio">Dynamic Radio Buttons</mat-radio-button>
@@ -242,19 +242,19 @@ bottom: -2; ">
             <mat-card-title>Test Names</mat-card-title>
         </mat-card-header>
         <mat-card-content>
-            <div style="text-align: center;">
+            <div style="text-align: center;"><!-- <p style="margin-left: 30px; color: #757575;">
+                    Add the names you want to test
+                </p> -->
                 <div style="font-size: 16px;margin: 20px;color: #48535e;">PASTE TEST NAMES</div>
                 <!-- <div style="font-size: 14px;margin-bottom: 20px;color: lightgray;">Brief Description Here</div> -->
             </div>
             <div>
                 <mat-form-field style="width: 90%;margin-left: 20px;" appearance="outline">
-                    <mat-label>Copy & Paste TEST NAMES</mat-label>
+                    <mat-label>Add the names you want to test</mat-label>
                     <textarea matInput rows="4" cols="50" [(ngModel)]="testNamesInput" placeholder=""
                         (ngModelChange)="upLoadNamesAndRationales(testNamesInput, true); "></textarea>
                 </mat-form-field>
-                <p style="margin-left: 30px; color: #757575;">
-                    Add the names you want to test
-                </p>
+
             </div>
 
         </mat-card-content>
@@ -333,7 +333,7 @@ bottom: -2; ">
                 <!-- <mat-checkbox [(ngModel)]="bmxItem.componentSettings[1].isImageType">Rank Logos</mat-checkbox> -->
             </div>
             <div class="sm-row-box-rkScale"
-                *ngIf="this.bmxItem.componentSettings[0].rankType != 'dragAndDrop' && this.bmxItem.componentSettings[0].rankType != 'dropDown'">
+                *ngIf="this.bmxItem.componentSettings[0].rankType != 'dragAndDrop' && this.bmxItem.componentSettings[0].rankType != 'dropDown' && this.bmxItem.componentSettings[0].rankType != 'radio' && this.bmxItem.componentSettings[0].rankType != 'dinamycRadio' ">
                 <div>
                     <div
                         style="display: flex;flex-direction: column;justify-content: center;gap: 10px;align-items: center; ">
@@ -504,6 +504,8 @@ bottom: -2; ">
                             (mouseleave)="selectedColumn = ''">
                             <span class="header-delete-icon" matTooltip="double click to delete column"
                                 matTooltipPosition="above" (dblclick)="openDialog('delete column', columnName)">x</span>
+                                <mat-icon style="cursor: pointer;" matTooltip="move column to the left"
+                                matTooltipPosition="above" (click)="swapColumnsLeft(e)">chevron_left</mat-icon>
                             <mat-icon style="cursor: pointer;" (click)="swapColumns(e)">chevron_right</mat-icon>
                         </div>
                     </div>
@@ -666,6 +668,9 @@ bottom: -2; ">
                             (mouseleave)="selectedColumn = ''">
                             <span class="header-delete-icon" matTooltip="double click to delete column"
                                 matTooltipPosition="above" (dblclick)="openDialog('delete column', columnName)">x</span>
+                                <mat-icon style="cursor: pointer;" matTooltip="move column to the left"
+                                matTooltipPosition="above" (click)="swapColumnsLeft(e)">chevron_left</mat-icon>
+
                             <mat-icon style="cursor: pointer;" (click)="swapColumns(e)">chevron_right</mat-icon>
 
                         </div>
@@ -813,7 +818,7 @@ bottom: -2; ">
                     <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 END HEADER TEXT AREA  🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
 
                     <!-- 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 TABLE CELLS  🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 -->
-                   
+
                     <div [style.width]=" columnName == 'nameCandidates'?bmxItem.componentSettings[0].nameCandidatesWidth-20 + 'px':''">
 
                         <!-- IF ELSE TEMPLATE INPUTS  -->
