--- a/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.html
@@ -256,7 +256,7 @@
                 mat-icon-button color="warn" aria-label="aria">
                 <mat-icon class="full-icon">star_border</mat-icon>
             </button>
-            <button (click)="createNewBmxComponent('ranking-scale')" matTooltip="rank matrix" matTooltipPosition="right"
+            <button (click)="createNewBmxComponent('ranking-scale')" matTooltip="rank radio matrix" matTooltipPosition="right"
                 mat-icon-button color="warn" aria-label="aria">
                 <mat-icon class="full-icon">military_tech</mat-icon>
             </button>
@@ -308,12 +308,14 @@
                 </mat-icon>
             </button>
             <br>
+
             <button *ngIf="true" (click)="isTemplate=='true'?saveTemplate() : openDialog('save')" mat-icon-button
-                matTooltip="{{isTemplate == 'true' ? 'Save Template' : 'Save Brand Matrix'}}"
-                matTooltipPosition="right">
-                <mat-icon class="full-icon">cloud_upload
-                </mat-icon>
-            </button>
+            matTooltip="{{isTemplate == 'true' ? 'save template' : 'save brand matrix'}}"
+            matTooltipPosition="right">
+        <mat-icon class="full-icon">save</mat-icon>
+    </button>
+
+
             <button *ngIf="true && this.isTemplate != 'true' " (click)="previewSurvey()" mat-icon-button matTooltip="preview brand matrix"
                 matTooltipPosition="right">
                 <mat-icon class="full-icon">visibility
