--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.html
@@ -34,13 +34,7 @@ gap: 0px;position: absolute;left: -713px;z-index: 1;border: 2px dashed #324395;"
             class="slider-font-size" tickInterval="0.5" min="50" max="600"
             [value]="bmxItem.componentSettings[0].selectWidth">
     </div>
-    <div style="display: flex;flex-direction: column;align-items: center;">
-        <p style="margin: 0 0 -12px;color: #324395;">rate
-        </p>
-        <input type="range" style="margin: 20px;width: 50px;" [(ngModel)]="bmxItem.componentSettings[0].rateWidth"
-            class="slider-font-size" tickInterval="0.5" min="50" max="400"
-            [value]="bmxItem.componentSettings[0].rateWidth">
-    </div>
+
     <!-- NAME CANDIATES -->
     <div style="display: flex;flex-direction: column;align-items: center;">
         <p style="margin: 0 0 -12px;color: #324395;">candidates
@@ -62,7 +56,13 @@ gap: 0px;position: absolute;left: -713px;z-index: 1;border: 2px dashed #324395;"
     </div>
 
     <!-- RATE -->
-
+    <div style="display: flex;flex-direction: column;align-items: center;">
+        <p style="margin: 0 0 -12px;color: #324395;">rate
+        </p>
+        <input type="range" style="margin: 20px;width: 50px;" [(ngModel)]="bmxItem.componentSettings[0].rateWidth"
+            class="slider-font-size" tickInterval="0.5" min="50" max="400"
+            [value]="bmxItem.componentSettings[0].rateWidth">
+    </div>
 
     <!-- COMMENTS -->
     <div style="display: flex;flex-direction: column;align-items: center;">
@@ -95,7 +95,7 @@ gap: 0px;position: absolute;left: -713px;z-index: 1;border: 2px dashed #324395;"
     <div style="display: flex;flex-direction: column;align-items: center;">
         <p style="margin: 0 0 -12px;color: #324395;">font size: {{bmxItem.componentSettings[0].fontSize}}</p>
         <input type="range" style="margin: 20px;width: 50px;" [(ngModel)]="bmxItem.componentSettings[0].fontSize"
-            class="slider-font-size" tickInterval="0.1" min="2" max="40"
+            class="slider-font-size" tickInterval="0.1" min="2" max="50"
             [value]="bmxItem.componentSettings[0].fontSize">
     </div>
 
@@ -456,6 +456,8 @@ align-items: center; ">
                         (mouseleave)="selectedColumn = ''">
                         <span class="header-delete-icon" matTooltip="double click to delete column"
                             matTooltipPosition="above" (dblclick)="openDialog('delete column', columnName)">x</span>
+                            <mat-icon style="cursor: pointer;" matTooltip="move column to the left"
+                            matTooltipPosition="above" (click)="swapColumnsLeft(e)">chevron_left</mat-icon>
                         <mat-icon style="cursor: pointer;" (click)="swapColumns(e)">chevron_right</mat-icon>
 
                     </div>
