--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.html
@@ -78,7 +78,7 @@ position: absolute;height: 54px;align-items: center">
     <div style="display: flex;flex-direction: column;align-items: center;">
         <p style="margin: 0 0 -12px;color: #324395;">font size: {{bmxItem.componentSettings[0].fontSize}}</p>
         <input type="range" style="margin: 20px;width: 50px;" [(ngModel)]="bmxItem.componentSettings[0].fontSize"
-            class="slider-font-size" tickInterval="0.1" min="2" max="40"
+            class="slider-font-size" tickInterval="0.1" min="2" max="50"
             [value]="bmxItem.componentSettings[0].fontSize">
     </div>
 
@@ -191,7 +191,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                     <mat-radio-group aria-label="Select an option"
                         [(ngModel)]="this.bmxItem.componentSettings[0].rankType">
                         <div style="display: flex;flex-direction: column;gap: 1px;">
-                            <mat-radio-button value="dropDown">Drop-Down</mat-radio-button>
+                            <mat-radio-button value="dropDown">DropDown</mat-radio-button>
                             <mat-radio-button value="radio">Radio Buttons</mat-radio-button>
                             <mat-radio-button value="checkbox">Checkbox</mat-radio-button>
                         </div>
