--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.scss
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.scss
@@ -698,6 +698,10 @@
   }
 
 
-
+  ::ng-deep .mdc-form-field {
+    display: inline-flex;
+    align-items: flex-end !important;
+    vertical-align: middle;
+}
   // 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜
   // END OF THE SCSS PROJECT *******************************************************************************************
