--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -1021,3 +1021,5 @@ bottom: -2; ">
 </div>
 
 <!--🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑END RATING TABLE 🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑-->
+<app-table *ngIf="showModalTable" (save)="showModalTable = $event" [displayedColumns]="columnsNames"
+    [dataSource]="dataSource" (cancelEvent)="showModalTable = false"></app-table>
