--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.html
@@ -190,7 +190,10 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                 <div style="margin-top: 0.5rem;">
                     <mat-radio-group aria-label="Select an option"
                         [(ngModel)]="this.bmxItem.componentSettings[0].rankType">
-                        <div style="display: flex;flex-direction: column;gap: 1px;">
+                        <div style="    display: flex;
+                        flex-direction: column;
+                        gap: 1px;
+                        align-items: flex-start;">
                             <mat-radio-button value="dropDown">DropDown</mat-radio-button>
                             <mat-radio-button value="radio">Radio Buttons</mat-radio-button>
                             <mat-radio-button value="checkbox">Checkbox</mat-radio-button>
@@ -277,7 +280,15 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
 <!-- BUTTON-->
 <div class="sm-row-box-rkScale">
 
-
+    <div class="button-cancel" style=" display: flex;
+    flex-direction: column;
+    align-items: center; ">
+              <button style="outline: none;color:#d35854;   font-size: 21px;" mat-icon-button (click)="selectedIndex = ''"
+                  aria-label="ranking">
+                  <mat-icon>cancel</mat-icon>
+              </button>
+              <p style="margin-top: -11; color: #D35854; font-size: 21px;">Cancel</p>
+          </div>
 
     <div class="button-Done"style="display: flex; flex-direction: column; align-items: center;">
 
@@ -543,4 +554,4 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
 
 <!--📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱 END TABLE GENERATOR 📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱-->
 <app-table *ngIf="showModalTable" (save)="showModalTable = $event" [displayedColumns]="columnsNames"
-[dataSource]="dataSource"></app-table>
+[dataSource]="dataSource" (cancelEvent)="showModalTable = false"></app-table>
